@startuml

title __USER's Class Diagram__\n

  namespace be.kuleuven.travelrecipe {
    namespace models.user {
      abstract class be.kuleuven.travelrecipe.models.user.AbstractUser {
          + setHomepageFragmentNotifier()
      }
    }
  }
  

  namespace be.kuleuven.travelrecipe {
    namespace models.user {
      class be.kuleuven.travelrecipe.models.user.User {
          - countryAfricaAmount : int
          - countryAmericaAmount : int
          - countryAsiaAmount : int
          - countryEuropeAmount : int
          - image : Bitmap
          - level : int
          - recipeAmount : int
          - userID : int
          - userName : String
          + User()
          + getCountryAfricaAmount()
          + getCountryAmericaAmount()
          + getCountryAsiaAmount()
          + getCountryEuropeAmount()
          + getImage()
          + getLevel()
          + getRecipeAmount()
          + getUserID()
          + getUserName()
          + setCountryAfricaAmount()
          + setCountryAmericaAmount()
          + setCountryAsiaAmount()
          + setCountryEuropeAmount()
          + setImage()
          + setLevel()
          + setRecipeAmount()
          + setUserID()
          + setUserName()
      }
    }
  }
  

  be.kuleuven.travelrecipe.models.user.AbstractUser o-- be.kuleuven.travelrecipe.notifier.HomepageFragmentNotifier : homepageFragmentNotifier
  be.kuleuven.travelrecipe.models.user.User -up-|> be.kuleuven.travelrecipe.models.user.AbstractUser


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
